--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = ["discord", "pydantic", "sqlalchemy", "tvdb_v4_official", "cinemagoer"]
+dependencies = ["discord", "pydantic", "sqlalchemy", "tvdb_v4_official"]
