--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,26 @@ version = "0.1.0"
 description = "Discord bot to manage weekly movie night suggestions and watch list"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = ["discord.py", "pydantic", "sqlalchemy", "tvdb_v4_official"]
+dependencies = ["discord.py", "pydantic", "sqlalchemy", "tvdb_v4_official", "ruff"]
+
+[tool.ruff]
+ignore-init-module-imports = true
+line-length = 120
+
+[tool.ruff.format]
+preview = true
+quote-style = "preserve"
+
+[tool.ruff.lint]
+select = [
+    "B",
+    "DTZ",
+    "E",
+    "F",
+    "I",
+    "PTH",
+    "S",
+    "SIM",
+    "TID251",
+    "UP",
+]
