--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Discord bot to manage weekly movie night suggestions and watch list"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = ["discord.py", "pydantic", "sqlalchemy", "tvdb_v4_official"]
+dependencies = ["discord.py", "pydantic", "sqlalchemy", "tvdb_v4_official", "thefuzz"]
 
 [tool.ruff]
 ignore-init-module-imports = true
